@@ -1,6 +1,11 @@
 2007-09-24  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/ChartPanel.java
+	(paintComponent): Clear chart buffer before refreshing.
+
+2007-09-24  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/chart/ChartPanel.java
 	(zoomAroundAnchor): New field,
 	(getZoomAroundAnchor): New method,
 	(setZoomAroundAnchor): Likewise,
